--- a/src/SignalR/samples/SignalRSamples/wwwroot/hubs.html
+++ b/src/SignalR/samples/SignalRSamples/wwwroot/hubs.html
@@ -16,6 +16,7 @@
 
         <select id="transport">
             <option value="Automatic" selected>Automatic</option>
+            <option value="HttpStreaming">HttpStreaming</option>
             <option value="WebSockets">WebSockets</option>
             <option value="ServerSentEvents">ServerSentEvents</option>
             <option value="LongPolling">LongPolling</option>
